Fix search input border issue on iOS
Prevents iOS user agent styling for the search input, as this was
causing differently rounded borders.

--- a/src/style.scss
+++ b/src/style.scss
@@ -69,6 +69,7 @@ p {
   }
 
   &__input {
+    -webkit-appearance: none;
     background-color: rgba(255, 255, 255, 0.8);
     border: 0;
     border-radius: 5px 0 0 5px;
